25396: Added group name case conversion